feat: 구간 추가 - 갈래길 처리